more fiddling with input

--- a/game-and-watch-stm32/Cargo.toml
+++ b/game-and-watch-stm32/Cargo.toml
@@ -21,8 +21,10 @@ embedded-graphics-core = "0.4.0"
 nb = "1.1.0"
 embedded-display-controller = "0.2.0"
 tinybmp = "0.6.0"
-embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34", features = ["stm32h7b0vb", "rt",  "defmt", "unstable-pac", "time-driver-any", "memory-x"]}
+embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34", features = ["stm32h7b0vb", "rt",  "defmt", "unstable-pac", "time", "time-driver-any", "memory-x"]}
 embassy-time = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34", features = ["defmt", "tick-hz-32_768"] }
 embassy-sync = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34", features = ["defmt"] }
 embassy-futures = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34", features = ["defmt"] }
 embassy-executor = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34", features = ["task-arena-size-524288", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]}
+button-driver = { version =  "0.2.1", features=["embassy", "embedded_hal"] }
+
